--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,5 +28,5 @@ steps:
     skip_app_build: false
     skip_api_build: true
     deployment_environment: production
-    deployment_token: $(DEPLOYMENT_TOKEN)
+    azure_static_web_apps_api_token: $(DEPLOYMENT_TOKEN)
   displayName: 'Deploy to Azure Static Web Apps' 
