--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
 
 - task: AzureStaticWebApp@0
   inputs:
-    app_location: '/'
+    app_location: 'src'
     api_location: ''
     output_location: 'build'
     skip_app_build: false
