--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
   inputs:
     app_location: 'src'
     api_location: ''
-    output_location: 'build'
+    output_location: '../build'
     skip_app_build: false
     skip_api_build: true
     deployment_environment: production
