--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,16 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
+- script: |
+    echo "Checking DEPLOYMENT_TOKEN variable..."
+    if [ -n "$(DEPLOYMENT_TOKEN)" ]; then
+      echo "DEPLOYMENT_TOKEN is set (length: ${#DEPLOYMENT_TOKEN})"
+      echo "First 10 characters: ${DEPLOYMENT_TOKEN:0:10}..."
+    else
+      echo "DEPLOYMENT_TOKEN is NOT set"
+    fi
+  displayName: 'Debug DEPLOYMENT_TOKEN variable'
+
 - task: AzureStaticWebApp@0
   inputs:
     app_location: 'src'
