Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,6 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
-- script: |
-    echo "Deployment_Token1 value: $(Deployment_Token1)"
-  displayName: 'Debug Deployment_Token1 variable'
-
 - task: AzureStaticWebApp@0
   inputs:
     app_location: 'src'
@@ -32,5 +28,5 @@ steps:
     skip_app_build: false
     skip_api_build: true
     deployment_environment: production
-    azure_static_web_apps_api_token: $(Deployment_Token1)
+    azure_static_web_apps_api_token: '2354953313626060caaa872e21baf3ab567fe7430cddb2958c290ce2f71e172501-a8fc8cef-e909-4fbe-9047-6f2a716982fc01e220907ce3f71e'
   displayName: 'Deploy to Azure Static Web Apps' 
